# tiger-tui

./: .gitignore  Cargo.toml  Makefile  README.md  design.md  docker-compose.yml  go.mod  go.sum  plan.md  tiger-go-docs.md  tigerbeetle-docs.md
business/accounts/domain/: chart.go
business/connection/infra/: tigerbeetle_client.go
cmd/tiger-tui/: main.go
internal/apperror/: codes.go  error.go  messages.go
internal/cache/: cache.go
internal/circuitbreaker/: circuitbreaker.go
internal/config/: config.go
internal/di/: container.go  di.go  token.go
internal/logger/: logger.go
pkg/ui/: commands.go  keys.go  messages.go  models.go  styles.go  tui.go
pkg/ui/components/: connection_form.go  dashboard.go  status_bar.go
src/: main.rs
src/modules/: mod.rs
src/modules/connection/: mod.rs
src/modules/connection/ui/: connection_view.rs  mod.rs
src/shared/: app_state.rs  error.rs  event.rs  message.rs  mod.rs
src/shared/domain/: chart_of_accounts.rs  mod.rs
src/ui/: dashboard.rs  mod.rs  status_bar.rs  theme.rs
